# cyber-openenv

./: .dockerignore  .gitignore  BLOG.md  CHANGELOG.md  CyberSOC_Arena_Training.ipynb  Dockerfile  PRESENTATION.md  README.md  SUBMIT.md  __init__.py  benchmark_cybersoc.py  client.py  demo.py  demo_curriculum.py  demo_long_horizon.py  demo_run.py  evaluate.py  gradio_app.py  inference.py  models.py  openenv.yaml  plot_results.py  pyproject.toml  requirements.txt  run_7b_hf_job.sh  run_hf_job.sh  train_7b_hf_jobs.py  train_grpo.py  train_reinforce.py  train_sft.py  train_trl.py  train_unsloth_grpo.py
api/: main.py
app/: env.py  grader.py  models.py  reward.py  state.py  tasks.py
assets/: model_card.md  training_log.json
baseline/: run_baseline.py
baselines/: __init__.py  heuristic_agent.py  random_agent.py  trained_policy_agent.py  untrained_prior_agent.py
cybersoc_arena/: __init__.py  actions.py  client.py  curriculum.py  env.py  models.py  observations.py  rewards.py  rubric.py  scenarios.py  server.py  state.py  web_ui.py
notebooks/: CyberSOC_Arena_GRPO.ipynb  CyberSOC_Arena_demo.ipynb
runs/: hf_job_7b_launch.txt
runs/grpo/: eval_results.json  summary.json  training_log.json  training_log.jsonl
scripts/: cleanup_obsolete.py  plot_curriculum_full.py  push_all_to_space.py  regenerate_plots.py  run_hf_job.sh  run_hf_job_a100.sh  run_hf_job_l40s.sh  train_hf_job.py
server/: Dockerfile  __init__.py  app.py  cybersoc_arena_environment.py  cybersoc_environment.py
tests/: smoke_test.py  smoke_test_v2.py  test_cybersoc_benchmark_smoke.py  test_cybersoc_env.py  test_cybersoc_rewards.py
training/: generate_dataset.py
training_runs/reinforce/: eval_results.json  training_log.json
training_runs/reinforce_smoke/: eval_results.json  training_log.json
