[project]
name = "cyber-openenv"
version = "0.1.0"
description = "Cybersecurity Incident Response OpenEnv Environment"
authors = [
    { name = "Amit Chowdary" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"